<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="416dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/grey"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:src="@drawable/ic_baseline_fingerprint_24"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/editPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:hint="@string/please_enter_your_password"

        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"

        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_below="@+id/editPasswd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="152dp"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="308dp"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b7"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="7"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/b8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b8"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="8"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/b9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b9"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="9"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b4"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="4"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/b5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b5"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/b6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b6"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="6"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b1"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b2"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="b3"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="3"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_btn"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_fingerprint_24"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn0"
                    android:onClick="b0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="delete"
                    android:src="@drawable/ic_baseline_backspace_24"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-7dp"
        android:layout_marginRight="-7dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/grey"
        android:gravity="center_horizontal"
        android:text="@string/enter"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />


</RelativeLayout>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@color/cardview_dark_background"-->
<!--    android:gravity="center"-->
<!--    android:orientation="vertical"-->
<!--    tools:context=".MainActivity">-->


<!--    <EditText-->
<!--        android:id="@+id/editPasswd"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Enter your password"-->
<!--        android:inputType="textPassword"-->
<!--        android:textColorHint="@color/white" />-->

<!--    <TextView-->
<!--        android:id="@+id/nameView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login"-->
<!--        android:textColor="#fafafa"-->
<!--        android:textSize="30dp" />-->

<!--    <GridLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:columnCount="3">-->

<!--        <Button-->
<!--            android:id="@+id/b1"-->
<!--            android:onClick="b1"-->
<!--            android:text="1" />-->

<!--        <Button-->
<!--            android:id="@+id/b2"-->
<!--            android:onClick="b2"-->
<!--            android:text="2" />-->

<!--        <Button-->
<!--            android:id="@+id/b3"-->
<!--            android:onClick="b3"-->
<!--            android:text="3" />-->

<!--        <Button-->
<!--            android:id="@+id/b4"-->
<!--            android:onClick="b4"-->
<!--            android:text="4" />-->

<!--        <Button-->
<!--            android:id="@+id/b5"-->
<!--            android:onClick="b5"-->
<!--            android:text="5" />-->

<!--        <Button-->
<!--            android:id="@+id/b6"-->
<!--            android:onClick="b6"-->
<!--            android:text="6" />-->

<!--        <Button-->
<!--            android:id="@+id/b7"-->
<!--            android:onClick="b7"-->
<!--            android:text="7" />-->

<!--        <Button-->
<!--            android:id="@+id/b8"-->
<!--            android:onClick="b8"-->
<!--            android:text="8" />-->

<!--        <Button-->
<!--            android:id="@+id/b9"-->
<!--            android:onClick="b9"-->
<!--            android:text="9" />-->

<!--        <ImageView-->
<!--            android:id="@+id/login_btn"-->
<!--            android:layout_width="94dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginVertical="20dp"-->
<!--            android:src="@drawable/ic_baseline_fingerprint_24" />-->

<!--        <Button-->
<!--            android:id="@+id/b0"-->
<!--            android:text="0" />-->

<!--        <ImageView-->
<!--            android:layout_width="85dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginVertical="20dp"-->
<!--            android:onClick="delete"-->
<!--            android:src="@drawable/ic_baseline_backspace_24" />-->

<!--    </GridLayout>-->

<!--    <Button-->
<!--        android:id="@+id/enter_btn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/register" />-->


<!--</LinearLayout>-->